--- a/PORTFOLIO INDEX.HTML
+++ b/PORTFOLIO INDEX.HTML
@@ -28,7 +28,7 @@
     </div>
 
         <i class="fas fa-bars fa-2x" id="menu-icon"></i>
-    <div class="navbar-menu col-6 " id="menu">
+    <div id="menu" class=" navbar-menu col-6">
         <a href="index.html"target="_blank">HOME </a>
         <a href="#tutorials_button"id="tutorials_top">TUTORIALS</a>
         <a href="#About-me-id">ABOUT ME</a>
@@ -270,6 +270,6 @@
     </div>
 
         <!-- footer ends form here -->
-        <script src="./INDEX.JS"></script>
+        <script src="./scripts/index.js"></script>
   </body>
 </html>
